Add data module, and basic launcher and appassembler configuration; compiler and access updates to get basic data patch running.